# tidbit

./: .gitignore  LICENSE
SSE/: README.md  compose.yml  tiltfile
SSE/backend/: Cargo.toml  Dockerfile
SSE/backend/src/: main.rs
SSE/front/: package.json  pnpm-lock.yaml
SSE/front/src/components/: SSE.tsx
SSE/front/src/pages/: index.astro
X509/: .gitignore  README.md  create-ca.sh  extraInfo.txt  extraInfoClient.txt
grpc/: README.md
grpc/client/: go.mod  main.go
grpc/protobuf/: simple.proto
grpc/server/: Cargo.toml  build.rs
grpc/server/src/: main.rs
java-spring/: .project  build.gradle.kts
java-spring/src/main/java/com/example/demo/: DemoApplication.java
jwt/: Cargo.toml
jwt/src/: core.rs  lib.rs  simple_auth.rs
otel/: Cargo.toml  Dockerfile  Tiltfile  compose.yml
otel/node-server/: Dockerfile  app.ts  package.json  pnpm-lock.yaml  tracing.ts
otel/src/: main.rs  otel_header.rs
ratatui/: Cargo.toml
ratatui/src/: main.rs
view-transition/: README.md  package.json  pnpm-lock.yaml
view-transition/src/components/: AudioInfo.tsx  AudioList.tsx  Player.tsx  Simple.tsx  music.ts
view-transition/src/layouts/: Layout.astro
view-transition/src/pages/: index.astro  music1.astro  music2.astro
