[package]
name = "otel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["tokio"] }
axum-macros = "0.4.1"
opentelemetry = "0.21.0"
opentelemetry-otlp = "0.14.0"
opentelemetry-stdout = { version = "0.2.0", features = ["trace", "logs"] }
opentelemetry_sdk = { version = "0.21.2", features = [ "rt-tokio"] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = "0.3.18"
