[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
axum = { version = "0.7.4", features = ["tokio"] }
axum-macros = "0.4.1"
futures-util = "0.3.30"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
